--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -3,7 +3,7 @@
       <p>Name: <input type="text" name="name"></p>
       <p>Email: <input type="text" name="email"></p>
       <p>Password: <input type="text" name="password"></p>
-      <input type="submit" id="Submit">
+      <input type="submit" id="Submit" value = "Sign Up">
    </form>
 
 
